<resources>
    <string name="app_name">Meat°it</string>
    <string name="facebook_app_id">1635312639839389</string>
    <string name="fb_login_protocol_scheme">fb1635312639839389</string>
    <string name="ver_company_mark">- © Mastrad 2019</string>
    <string name="ble_not_supported">BLE is not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth is not supported</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="connecting_probe">Connecting probe ...</string>
    <string name="fail_email_addr">Not a valid e-mail address</string>
    <string name="no_mastrad_technical_manual">Can\'t find Mastrad technical manual</string>
    <string name="no_connective_probe">There is no connective probe, please connect one probe</string>
    <string name="ble_not_enable">Bluetooth is not enable, please turn on bluetooth</string>
    <string name="login_not_find">Not a valid account, Please check again</string>
    <string name="login_not_find_server">Not a valid customer account or password, Please check again</string>
    <string name="login_turn_on_network">Please turn on network</string>
    <string name="login_password_err">Password is wrong</string>
    <string name="login_facebook_create_fail">Facebook account add fail:</string>
    <string name="login_facebook_create_success">Facebook account add success</string>
    <string name="login_facebook_account_exist">This email address is already linked to an account.</string>
    <string name="login_add_to_db_fail">Add to database fail</string>
    <string name="photo_save_to">Photo is saved to:</string>
    <string name="photo_save_fail">Photo save error</string>
    <string name="photo_share_using">Please choice app:</string>
    <string name="favorite_food_choice_fail">"Don't select probe or probe is cooking now"</string>
    <string name="ing">ing...</string>
    <string name="probe_delete">Delete</string>
    <string name="fail_create_account">Failed to create account</string>
    <string name="create_err_not_agree_cgd">Please accept the General Conditions of Use</string>
    <string name="create_err_pwd_not_match">Password does not match</string>
    <string name="create_err_field_empty">Some fields are empty</string>
    <string name="create_err_not_valid_email">Not a valid e-mail address</string>
    <string name="create_err_pwd_less_6">Password must have at least 6 characters</string>
    <string name="login_title">My smart cooking thermometer</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_pwdQ">Forgot password?</string>
    <string name="login_login">LOGIN</string>
    <string name="login_new_account">New account</string>
    <string name="login_new_create">CREATE</string>
    <string name="login_facebook">Or log in with</string>
    <string name="login_email">Email</string>
    <string name="login_create_my_account">CREATE MY ACCOUNT</string>
    <string name="login_last_name">Last name</string>
    <string name="login_first_name">First name</string>
    <string name="login_password_confirmation">Password confirmation</string>
    <string name="login_receive_info">I would like to receive information and updates about the Mastrad brand.</string>
    <string name="login_accept_terms">I accept the \ngeneral terms and conditions.</string>
    <string name="login_accept_terms_link">general terms and conditions.</string>
    <string name="login_create_account">CREATE MY ACCOUNT</string>
    <string name="login_forgot_pwd">Forgot password</string>
    <string name="login_send">SEND</string>
    <string name="introduce_1_top">QUICK START GUIDE</string>
    <string name="introduce_1_middle">Activate your meat°it probe by briefly placing the black part of the probe in the central section of the docking station.\nTake it out; it is activated.</string>
    <string name="introduce_1_down">Click on the meat°it app and make sure\nthat the Bluetooth&#174; is turned on</string>
    <string name="introduce_2_top">QUICK START GUIDE</string>
    <string name="introduce_2_middle">Select your probe in order to\nprogram your cooking.</string>
    <string name="introduce_2_down">Select your cooking device, type of food, cut and desired doneness and then validate.</string>
    <string name="introduce_3_top">HOW TO INSERT YOUR PROBE?</string>
    <string name="introduce_3_middle">Insert "<b>"the entirety"</b>" of the metallic part of our probe into the thickest part of the meat.\nThe meat should not cover the black ceramic piece of your probe.</string>
    <string name="introduce_3_down">The thickness of the meat needs to be at least 1/2 inch (20mm)</string>
    <string name="introduce_3_buttonOK">"   OK   "</string>
    <string name="introduce_4_top">HOW TO REMOVE YOUR PROBE?</string>
    <string name="introduce_4_top2">Careful, when finished cooking, your probe is very hot. Always use your extraction key and any other adequate protection gear to remove it.</string>
    <string name="introduce_4_middle">Use the key located underneath the docking station in order to remove the probe.</string>
    <string name="introduce_4_down">Effortlessly remove the probe from\nthe meat.</string>
    <string name="introduce_4_gotit">"       GOT IT       "</string>
    <string name="introduce_4_noShow">Don’t show me this again</string>
    <string name="trouble_title">TROUBLESHOOTING</string>
    <string name="trouble_middle">I ensure that Bluetooth&#174; \n is activated on my telephone.</string>
    <string name="trouble_down">I reactivate my probe.\nI potentially recharge it.</string>
    <string name="trouble_button">"  REFRESH  "</string>
    <string name="cook_teach_title">HOW TO INSERT YOUR PROBE?</string>
    <string name="cook_teach_teach1">Insert "<b>"the entirety"</b>" of the metallic part of your probe into the thickest part of the meat.\nThe meat should not cover the black ceramic piece of your probe.</string>
    <string name="cook_teach_teach2">The thickness of the meat needs to be at least 1/2 inch (20mm)</string>
    <string name="cook_teach_OK">OK</string>
    <string name="cook_internal_temp">INTERNAL\nTEMP.</string>
    <string name="cook_target_temp">TARGET\nTEMP.</string>
    <string name="cook_internal_temp2">I N T E R N A L</string>
    <string name="cook_target_temp2">T A R G E T</string>
    <string name="cook_timer">Timer</string>
    <string name="cook_ready">IT’S READY</string>
    <string name="cook_overcooking">OVERCOOKING</string>
    <string name="cook_photo_meat">Meat</string>
    <string name="cook_photo_doneness">Doneness</string>
    <string name="cook_photo_internal_temp">Internal temp</string>
    <string name="cook_photo_cooking_time">Cooking time</string>
    <string name="cook_photo_made_on">Made on</string>
    <string name="slide_menu_program">Program my probe</string>
    <string name="slide_menu_monitor">Monitor my cooking</string>
    <string name="slide_menu_cooking">Best of</string>
    <string name="slide_menu_recipe">Recipes</string>
    <string name="slide_menu_timer">Timer</string>
    <string name="slide_menu_settings">Settings</string>
    <string name="slide_menu_help">Help</string>
    <string name="count_stopwatch">STOPWATCH</string>
    <string name="count_timer">TIMER</string>
    <string name="count_reset">RESET</string>
    <string name="count_hours">hours</string>
    <string name="count_minute">minutes</string>
    <string name="count_second">seconds</string>
    <string name="cook_list_title">Best of</string>
    <string name="cook_list_favorite">My favorites</string>
    <string name="cook_list_history">My history</string>
    <string name="cook_favorite">Favorite</string>
    <string name="history_title">My history</string>
    <string name="history_meat">Meat:</string>
    <string name="history_doneness">Doneness:</string>
    <string name="history_internal_temp">Internal temp:</string>
    <string name="history_cook_time">Cooking time:</string>
    <string name="history_made_on">Made on:</string>
    <string name="setting_title">Settings</string>
    <string name="setting_vibrate_mode">Vibrate mode</string>
    <string name="setting_ringtone">Ringtone</string>
    <string name="setting_pre_alert">Pre-alert</string>
    <string name="setting_units">Units</string>
    <string name="setting_about">About</string>
    <string name="setting_logout">Logout</string>
    <string name="setting_keep_live">Keep the screen always ON</string>
    <string name="setting_keep_live1">Keep the screen always ON</string>
    <string name="setting_hide_all_tutorials">Hide all the tutorials</string>
    <string name="setting_authorize_access_as">Authorize access as a background process</string>
    <string name="setting_connection_wifi">WiFi connection</string>
    <string name="setting_ringtone_detail">RingTone</string>
    <string name="setting_vibrate_detail">Activate the vibrations as well as the sound.</string>
    <string name="setting_pre_alert_detail">Alerts you once 5 minutes remain.</string>
    <string name="setting_keep_live_detail">Always keep the screen on. Caution, this option has high battery use. We recommend you plug in your appliance for long cooking times.</string>
    <string name="setting_hide_all_tutorials_detail">Hide ALL the tutorials.</string>
    <string name="setting_authorize_access_as_detail">Allow use of the app as a background process.\nIn this way you can follow the cooking process while using other apps.\nThis will take the form of a permanent upper banner on your screen where the remaining time and cooking speed will be displayed.</string>
    <string name="about_title">About</string>
    <string name="about_app_version">App version</string>
    <string name="about_firmware_ver">Firmware version</string>
    <string name="about_website">Website</string>
    <string name="help_title">Help</string>
    <string name="help_connect_device">Connect my device</string>
    <string name="help_instruct_manual">Instructions manual</string>
    <string name="help_faq">FAQ</string>
    <string name="help_remark">A remark?</string>
    <string name="help_customer_service">Customer Service</string>
    <string name="help_remark_name">Name1</string>
    <string name="help_remark_email">Email</string>
    <string name="help_remark_telephone">Telephone</string>
    <string name="help_remark_info">A suggestion for improvement? A remark? Something you would like in future?\n\nmeat°it is a joint project, we are listening!</string>
    <string name="help_service_info">Tell us your problem, we will answer within 48 hours.</string>
    <string name="help_send">SEND</string>
    <string name="help_send_feedback">Thank you for your message!\n\nWe will answer as soon as possible.\n\n-\n\nThe meat°it team</string>
    <string name="food_beef">Beef</string>
    <string name="food_veal">Veal</string>
    <string name="food_lamb">Lamb</string>
    <string name="food_pork">Pork</string>
    <string name="food_chicken">Chicken</string>
    <string name="food_turkey">Turkey</string>
    <string name="food_duck">Duck</string>
    <string name="food_fish">Fish</string>
    <string name="food_custom">Customized</string>
    <string name="food_fire_rare">Rare</string>
    <string name="food_fire_middle_rare">Medium rare</string>
    <string name="food_fire_medium">Medium</string>
    <string name="food_fire_medium_well">Medium well</string>
    <string name="food_fire_well_done">Well done</string>
    <string name="food_fire_personalized">Personalized</string>
    <string name="food_fire_semi_cooked">Semi-cooked</string>
    <string name="food_fire_cooked">Cooked</string>
    <string name="food_fire_pink">Pink</string>
    <string name="food_fire_medium_to_well">Medium to well</string>
    <string name="food_fire_pearly_fish">Pearly</string>
    <string name="food_fire_well_done_fish">Well done</string>
</resources>