<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".AccountFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/viewPager"
        android:layout_width="376dp"
        android:layout_height="588dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:src="@drawable/img_intro_3"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/introduce_2_top"
        android:textColor="@color/colorPurple"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/viewPager" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/introduce_2_middle"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/img_intro_4"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/introduce_2_down"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/viewPager"
        app:layout_constraintStart_toStartOf="@+id/viewPager"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

</androidx.constraintlayout.widget.ConstraintLayout>